--- a/trust-crm/Dockerfile
+++ b/trust-crm/Dockerfile
@@ -3,10 +3,11 @@ FROM node:18
 WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
 
-EXPOSE 10000
+EXPOSE 5000
 
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
